samples/_failures_safe/1761042675_5ad868_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d00b5e9.c: In function ‘main’:
./samples/SAFE/__tmp_9d00b5e9.c:148:20: error: missing terminating " character
  148 |             printf("Invalid format. Use:
      |                    ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9d00b5e9.c:148:13: error: expected expression at end of input
  148 |             printf("Invalid format. Use:
      |             ^~~~~~
./samples/SAFE/__tmp_9d00b5e9.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d00b5e9.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d00b5e9.c:148:13: error: expected declaration or statement at end of input
